--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   device_preview: ^1.2.0
   get_storage: ^2.1.1
   flutter_native_splash: ^2.4.4
+  firebase_core: ^3.10.1
+  firebase_auth: ^5.4.1
+  cloud_firestore: ^5.6.2
 
 dev_dependencies:
   flutter_test:
