--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   firebase_auth: ^5.4.1
   cloud_firestore: ^5.6.2
   iconsax:
+  dotted_border: ^2.1.0
+  file_picker: ^8.1.7
+  firebase_storage: ^12.4.1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +51,7 @@ flutter:
   assets:
     - assets/png/
     - assets/jpg/
+    - assets/svg/
 
   fonts:
     - family: Poppins
