--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   dotted_border: ^2.1.0
   file_picker: ^8.1.7
   firebase_storage: ^12.4.1
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
