--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   file_picker: ^8.1.7
   firebase_storage: ^12.4.1
   video_player: ^2.9.2
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
