--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,15 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: "^0.14.3"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/png/recipe128.png"
+  min_sdk_android: 23 # android min sdk min:16, default 21
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/png/recipe128.png"
 
 flutter_native_splash:
   # image: "assets/images/png/play_store_512.png"
